fixed stretching on a page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,6 +9,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  width: 100%;
+}
 .item {
   display: flex;
   justify-content: space-between;
